k8s/manifests/kg-api/kg-api.yaml
# Copyright 2025, Battelle Energy Alliance, LLC, ALL RIGHTS RESERVED

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kg-api
  labels:
    app: kg-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kg-api
  template:
    metadata:
      labels:
        app: kg-api
    spec:
      containers:
        - image: 869935092417.dkr.ecr.us-west-1.amazonaws.com/inl-image-registry/kg_api:latest
          imagePullPolicy: Always
          name: kg-api
          ports:
            - containerPort: 8001
      imagePullSecrets:
        - name: inl-registry-creds-kg-api

---
apiVersion: v1
kind: Service
metadata:
  name: kg-api
spec:
  selector:
    app: kg-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kg-api
spec:
  rules:
    - host: kg-api.caiser.ornlkdi.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kg-api
                port:
                  number: 80
  tls:
    - hosts:
        - kg-api.caiser.ornlkdi.org
      secretName: tls
